Updated Portfolio component to render Portfolio and Publications pages on mobile correctly.

--- a/src/components/Portfolio/Portfolio.module.css
+++ b/src/components/Portfolio/Portfolio.module.css
@@ -1,10 +1,12 @@
 .portfolioGridContainer {
     display: grid;
+    justify-items: center;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     gap: 2rem;
 
-    width: 60vw;
+    width: 90vw;
     margin: 0 auto;
+    /* border: 1px solid red; */
 }
 
 .portfolioHeader {
@@ -13,4 +15,13 @@
     margin-top: 2rem;
     font-size: 6em;
     font-weight: 700;;
+}
+
+@media screen and (max-width: 400px) {
+    .portfolioHeader {
+        margin-top: 75px;
+        margin-bottom: 0.25em;
+        font-size: 3.5em;
+        /* border: 1px solid red; */
+    }
 }
