--- a/src/components/Tile/Tile.module.css
+++ b/src/components/Tile/Tile.module.css
@@ -11,11 +11,8 @@
     background-color: var(--bg2);
     padding: 1.5rem;
     /* border-radius: 1rem; */
-    box-shadow: 10px 10px 0px -5px var(--secondary-action)
-}
-
-.tile:hover {
-    
+    box-shadow: 10px 10px 0px -5px var(--secondary-action);
+    width: 75%;
 }
 
 .tileHeader {
